oauth2-proxy/old/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: oauth2-proxy
  template:
    metadata:
      labels:
        name: oauth2-proxy
    spec:
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.4.0
          livenessProbe:
            httpGet:
              path: /ping
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
          ports:
            - containerPort: 4180
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ping
              port: http
              scheme: HTTP
          resources:
            requests:
              cpu: 10m
